--- a/css/cover.css
+++ b/css/cover.css
@@ -1,7 +1,6 @@
-/*
- * Globals
- */
 
+
+/*--------------------------------------------------------------------------------------------------*/
 /* Links */
 a,
 a:focus,
@@ -9,17 +8,8 @@ a:hover {
   color: #333;
 }
 
-/* Custom default button */
-.btn-default,
-.btn-default:hover,
-.btn-default:focus {
-  color: #fff;
-  text-shadow: none; /* Prevent inheritence from `body` */
-  background-color: #333;
-  border: 1px solid #333;
-}
 
-
+/*--------------------------------------------------------------------------------------------------*/
 /*
  * Base structure
  */
@@ -29,12 +19,11 @@ body {
   height: 100%;
   background: url("../images/background.png") no-repeat;
   background-size: 100% 180%;
-
 }
 body {
   color: #333;
   text-align: center;
-  text-shadow: 0 1px 3px rgba(0,0,0,.5);
+  
 }
 
 /* Extra markup and styles for table-esque vertical and horizontal centering */
@@ -61,52 +50,7 @@ body {
 }
 
 
-/*
- * Header
- */
-.masthead-brand {
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-
-.masthead-nav > li {
-  display: inline-block;
-}
-.masthead-nav > li + li {
-  margin-left: 20px;
-}
-.masthead-nav > li > a {
-  padding-right: 0;
-  padding-left: 0;
-  font-size: 16px;
-  font-weight: bold;
-  color: #fff; /* IE8 proofing */
-  color: rgba(255,255,255,.75);
-  border-bottom: 2px solid transparent;
-}
-.masthead-nav > li > a:hover,
-.masthead-nav > li > a:focus {
-  background-color: transparent;
-  border-bottom-color: #a9a9a9;
-  border-bottom-color: rgba(255,255,255,.25);
-}
-.masthead-nav > .active > a,
-.masthead-nav > .active > a:hover,
-.masthead-nav > .active > a:focus {
-  color: #333;
-  border-bottom-color: #fff;
-}
-
-@media (min-width: 768px) {
-  .masthead-brand {
-    float: left;
-  }
-  .masthead-nav {
-    float: right;
-  }
-}
-
-
+/*--------------------------------------------------------------------------------------------------*/
 /*
  * Cover
  */
@@ -120,14 +64,7 @@ body {
 }
 
 
-/*
- * Footer
- */
 
-.mastfoot {
-  color: #999; /* IE8 proofing */
-  color: rgba(255,255,255,.5);
-}
 /*--------------------------------------------------------------------------------------------------*/
 /* Main menu settings */
 #centeredmenu {
@@ -181,8 +118,8 @@ body {
 }
 #centeredmenu ul li:hover a,
 #centeredmenu ul li.hover a { /* This line is required for IE 6 and below */
-   background:white; /* Top menu items background colour */
-   color:black;
+   background:white; /* Top menu items background colour when hovered*/
+   color:gray;
    border-bottom:1px solid black;
 }
 
@@ -268,3 +205,4 @@ body {
     width: 700px;
   }
 }
+
