--- a/css/cover.css
+++ b/css/cover.css
@@ -32,15 +32,13 @@ body {
   width: 100%;
   height: 100%; /* For at least Firefox */
   min-height: 100%;
-  -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
-          box-shadow: inset 0 0 100px rgba(0,0,0,.5);
 }
 .site-wrapper-inner {
   display: table-cell;
   vertical-align: top;
 }
 .cover-container {
-  margin-top: 200px;
+  margin-top: 120px;
   margin-right: auto;
   margin-left: auto;
 }
@@ -187,7 +185,7 @@ body {
     /* Pull out the header and footer */
   
   .mastfoot {
-    position: fixed;
+    position: relative;
     bottom: 0;
   }
   /* Start the vertical centering */
