--- a/css/notinuse.css
+++ b/css/notinuse.css
@@ -1,4 +1,11 @@
 
+/* To get shadows around the page, add this in .site-wrapper*/
+.site-wrapper {
+  
+  -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
+          box-shadow: inset 0 0 100px rgba(0,0,0,.5);
+}
+
 /*
  * Header
  */
