--- a/css/cover.css
+++ b/css/cover.css
@@ -42,6 +42,11 @@ body {
   margin-right: auto;
   margin-left: auto;
 }
+.cover2-container {
+  margin-top: 120px;
+  margin-right: auto;
+  margin-left: auto;
+}
 .inner-container {
   margin-top: 100px;
   margin-right: 20%;
@@ -194,17 +199,23 @@ body {
   }
   /* Handle the widths */
   .masthead,
-  .mastfoot,
   .cover-container {
+    width: 100%; /* Must be percentage or pixels for horizontal alignment */
+  },
+  .mastfoot,
+  .cover2-container {
     width: 100%; /* Must be percentage or pixels for horizontal alignment */
   }
 }
 
 @media (min-width: 992px) {
   .masthead,
-  .mastfoot,
   .cover-container {
     width: 700px;
+  }
+  .mastfoot,
+  .cover2-container {
+    width: 100%; /* Must be percentage or pixels for horizontal alignment */
   }
 }
 
